# NNS-telegram-bot

./: .breakpoints  keep_alive.py  main.py  pyproject.toml  read_file.py  retrive.py
